--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ attrs==23.1.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
 cmake==3.26.3
 ffmpeg-python==0.2.0
 filelock==3.12.0
 frozenlist==1.3.3
 future==0.18.3
+gTTS==2.3.2
 idna==3.4
 Jinja2==3.1.2
 lit==16.0.2
@@ -34,10 +36,12 @@ nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 openai==0.27.5
 openai-whisper==20230314
+playsound==1.3.0
 pocketsphinx==5.0.0
 PyAudio==0.2.13
 pycparser==2.21
 python-dotenv==1.0.0
+pyttsx3==2.90
 regex==2023.3.23
 requests==2.29.0
 sounddevice==0.4.6
